2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (poked_after_eval_hook): Rename to
	`poked_after_cmd_hook`.

2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (vu): Add prefix `plet_`.
	(vu_highlight): Likewise.
	(treevu_sct): Likewise.
	(treevu): Likewise.
	(disasm): Likewise.

2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (__chan_send_p): Add `poked` prefix.
	(__chan_send_chan): Likewise.
	(__chan_send_buf): Likewise.
	(__chan_send_reset): Likewise.
	(chan_send): Likewise.
	(__err_send): Use `poked_chan_send`.
	(poked_ehandler): Likewise.
	(treevu_sct): Likewise.
	(disasm): Likewise.
	* poked/poked.c (poked_buf_send): Update.
	(main): Likewise.

2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (main): Call `__poked_run_after_eval_hooks` even
	if the statment is not expression.

2022-03-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (poked_init): Remove dead code.

2022-03-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (Poked_Hook): New type.
	(poked_after_eval_hook): New variable for saving hooks.
	(__poked_run_after_eval_hooks): New function.
	* poked/poked.c (main): Call `__poked_run_after_eval_hooks` after
	compiling statement.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke-el/poke-el.texi: New file.
	* poke-el/COPYING: Likewise.
	* poke-el/README: Likewise.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-ios-populate): Reverse list of IOS before
	printing.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-repl-input-sender): Avoid race condition in
	repl handling.

2022-03-18  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-edit-1): Use tree-mode when formatting
	element values.
	(poke-exit): Handle *poke-edit*.

2022-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-maps): Define.
	(poke-exit): Handle *poke-maps*.